# ojax

./: .gitignore  LICENSE.jax  LICENSE.raven  README.md  THIRD_PARTY_LICENSES  dune-project
bench/: dune  matmul_chain.ml
reference/: PIN
scripts/: glm.sh
spec/: ad.cases.json  api.cases.json  array_methods.cases.json  batching.cases.json  complex.cases.json  conditionals.cases.json  contractions.cases.json  creation.cases.json  dtypes.cases.json  image.cases.json  indexing.cases.json  (+30 more)
src/: ad_util.ml  ad_util.mli  api.ml  api.mli  api_util.ml  api_util.mli  backend.ml  backend.mli  basearray.ml  basearray.mli  config.ml  config.mli  core.ml  core.mli  dtype.ml  dtype.mli  dtypes.ml  dtypes.mli  dune  errors.ml  errors.mli  flatten_util.ml  flatten_util.mli  jaxpr.ml  jaxpr.mli  lapack_seam.mli  linear_util.ml  linear_util.mli  ndarray.ml  ndarray.mli  pretty_printer.ml  pretty_printer.mli  source_info_util.ml  source_info_util.mli  tree_util.ml  tree_util.mli  types.ml  types.mli  util.ml  util.mli
src/image/: scale.ml  scale.mli
src/interpreters/: ad.ml  ad.mli  batching.ml  batching.mli  partial_eval.ml  partial_eval.mli
src/lax/: convolution.ml  convolution.mli  lax.ml  lax.mli  linalg.ml  linalg.mli  slicing.ml  slicing.mli  special.ml  special.mli  utils.ml  utils.mli  windowed_reductions.ml  windowed_reductions.mli
src/lax/control_flow/: conditionals.ml  conditionals.mli  loops.ml  loops.mli  solves.ml  solves.mli
src/linalg/: discover.ml  discover.mli  lapack.ml  lapack.mli  lapack_shim.c
src/nn/: functions.ml  functions.mli  initializers.ml  initializers.mli
src/numpy/: array_constructors.ml  array_constructors.mli  array_creation.ml  array_creation.mli  array_methods.ml  array_methods.mli  einsum.ml  einsum.mli  indexing.ml  indexing.mli  lax_numpy.ml  lax_numpy.mli  linalg.ml  linalg.mli  polynomial.ml  polynomial.mli  reductions.ml  reductions.mli  scalar_types.ml  scalar_types.mli  setops.ml  setops.mli  sorting.ml  sorting.mli  tensor_contractions.ml  tensor_contractions.mli  ufuncs.ml  ufuncs.mli  vectorize.ml  vectorize.mli  window_functions.ml  window_functions.mli
src/ops/: segment.ml  segment.mli  special.ml  special.mli
src/pjrt/: abi.ml  abi.mli  buffer.ml  buffer.mli  client.ml  client.mli  discover.ml  discover.mli  executable.ml  executable.mli  pjrt_abi_assert.h  pjrt_shim.c
src/random/: core.ml  core.mli  prng.ml  prng.mli  threefry.ml  threefry.mli
src/scipy/: integrate.ml  integrate.mli  linalg.ml  linalg.mli  ndimage.ml  ndimage.mli  special.ml  special.mli
src/scipy/cluster/: vq.ml  vq.mli
src/scipy/optimize/: bfgs.ml  bfgs.mli  lbfgs.ml  lbfgs.mli  line_search.ml  line_search.mli  minimize.ml  minimize.mli
src/scipy/sparse/: linalg.ml  linalg.mli
src/scipy/spatial/: transform.ml  transform.mli
src/scipy/stats/: bernoulli.ml  bernoulli.mli  beta.ml  beta.mli  betabinom.ml  betabinom.mli  binom.ml  binom.mli  cauchy.ml  cauchy.mli  chi2.ml  chi2.mli  dirichlet.ml  dist_util.ml  dist_util.mli  expon.ml  expon.mli  gamma.ml  gennorm.ml  gennorm.mli  geom.ml  geom.mli  gumbel_l.ml  gumbel_l.mli  gumbel_r.ml  gumbel_r.mli  laplace.ml  laplace.mli  logistic.ml  logistic.mli  multinomial.ml  multinomial.mli  nbinom.ml  norm.ml  norm.mli  pareto.ml  pareto.mli  poisson.ml  poisson.mli  stats_core.ml  (+10 more)
src/stablehlo/: emit.ml  emit.mli  ir.ml  ir.mli
test/golden/: compare.ml  dune  manifest.ml  npz.ml
test/unit/: dune  test_ad.ml  test_ad_util.ml  test_api.ml  test_api_util.ml  test_backend.ml  test_basearray.ml  test_batching.ml  test_core.ml  test_dtypes.ml  test_errors.ml  test_jaxpr.ml  test_lax.ml  test_lax_binary_a.ml  test_lax_binary_b.ml  test_lax_conditionals.ml  test_lax_convolution.ml  test_lax_cumulatives.ml  test_lax_gather_scatter.ml  test_lax_linalg.ml  test_lax_loops.ml  test_lax_reductions.ml  test_lax_rest_a.ml  test_lax_rest_b.ml  test_lax_shape.ml  test_lax_slicing.ml  test_lax_solves.ml  test_lax_special.ml  test_lax_unary_a.ml  test_lax_unary_b.ml  test_lax_windowed_reductions.ml  test_linalg_lapack.ml  test_linear_util.ml  test_ndarray.ml  test_ndarray_uint32.ml  test_numpy_indexing.ml  test_numpy_lax_numpy.ml  test_numpy_reductions.ml  test_numpy_vectorize.ml  test_partial_eval.ml  (+12 more)
(+49 files in other folders)
