(test
 (name manifest)
 (modules npz compare manifest)
 (libraries alcotest yojson ojax)
 (deps
  (source_tree %{project_root}/goldens/dtypes)
  (source_tree %{project_root}/goldens/lax)
  (source_tree %{project_root}/goldens/jaxpr)
  (source_tree %{project_root}/goldens/ad)
  (source_tree %{project_root}/goldens/batching)
  (source_tree %{project_root}/goldens/api)
  (source_tree %{project_root}/goldens/conditionals)))
