(test
 (name manifest)
 (modules npz compare manifest)
 (libraries alcotest yojson ojax)
 (deps
  (source_tree %{project_root}/goldens/dtypes)
  (source_tree %{project_root}/goldens/lax)
  (source_tree %{project_root}/goldens/jaxpr)
  (source_tree %{project_root}/goldens/ad)
  (source_tree %{project_root}/goldens/batching)
  (source_tree %{project_root}/goldens/api)
  (source_tree %{project_root}/goldens/conditionals)
  (source_tree %{project_root}/goldens/loops)
  (source_tree %{project_root}/goldens/solves)
  (source_tree %{project_root}/goldens/lax_numpy)
  (source_tree %{project_root}/goldens/ufuncs)
  (source_tree %{project_root}/goldens/reductions)
  (source_tree %{project_root}/goldens/indexing)
  (source_tree %{project_root}/goldens/array_methods)
  (source_tree %{project_root}/goldens/creation)
  (source_tree %{project_root}/goldens/contractions)))
