(tests
 (names
  test_ndarray
  test_dtypes
  test_tree_util
  test_basearray
  test_linear_util
  test_source_info_util
  test_errors
  test_core
  test_ad_util
  test_lax
  test_lax_unary_a
  test_lax_unary_b
  test_lax_binary_a
  test_lax_binary_b
  test_jaxpr
  test_partial_eval
  test_ad
  test_batching
  test_api_util
  test_api)
 (libraries ojax alcotest))
