(tests
 (names
  test_ndarray
  test_dtypes
  test_tree_util
  test_basearray
  test_linear_util
  test_source_info_util
  test_errors
  test_core
  test_ad_util
  test_lax
  test_lax_unary_a
  test_lax_unary_b
  test_lax_binary_a
  test_lax_binary_b
  test_lax_shape
  test_lax_slicing
  test_lax_convolution
  test_lax_windowed_reductions
  test_lax_gather_scatter
  test_lax_reductions
  test_lax_rest_a
  test_lax_rest_b
  test_lax_special
  test_lax_conditionals
  test_lax_loops
  test_lax_cumulatives
  test_lax_solves
  test_jaxpr
  test_partial_eval
  test_ad
  test_batching
  test_api_util
  test_api
  test_numpy_lax_numpy
  test_numpy_reductions)
 (libraries ojax alcotest))
